fixing spacing

--- a/app/src/component_styles/local_card.css
+++ b/app/src/component_styles/local_card.css
@@ -3,6 +3,8 @@
     justify-content: space-between;
     align-items: center;
 
+    text-align: justify;
+
     padding: 10px;
 
     border: 1px solid #EACF44;
@@ -32,22 +34,24 @@
 }
 
 
-.card_main_data {
-    height: fit-content;
-}
-
-
 .card_tags {
-    height: fit-content;
+    display: flex;
+    align-items: center;
+
     white-space: nowrap;
     overflow: hidden;
+    
+    background: linear-gradient(to right, transparent, white);
+
     padding: 4px 0px;
-    text-overflow: ellipsis;
 }
 
 .card_tags span{
-    padding: 2.5px;
-    margin: 2.5px;
+    padding: 2px;
+    margin: 7px 5px 7px 0px;
+
+    height: fit-content;
+    width: fit-content;
 
     border: 1px solid black;
     border-radius: 5px;
@@ -55,9 +59,8 @@
 
 
 .card_about {
-    text-align: justify;
     overflow: hidden;
-    text-overflow: ellipsis;
+    background: linear-gradient(transparent, white);
 }
 
 
@@ -82,11 +85,7 @@
     }
 
     span, p {
-        font-size: 0.5em ;
-    }
-
-    .card_about {
-        height: 32px;
+        font-size: 0.4em ;
     }
 
 }
@@ -109,15 +108,11 @@
     }
 
     h2 {
-        font-size: 0.8em;
+        font-size: 0.7em;
     }
 
     span, p {
-        font-size: 0.7em ;
-    }
-
-    .card_about {
-        height: 64px;
+        font-size: 0.6em ;
     }
 
 }
@@ -145,10 +140,6 @@
 
     span, p {
         font-size: 0.8em ;
-    }
-
-    .card_about {
-        height: 88px;
     }
 
 }
